added hero section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,14 @@
 .primary-color{
   color: rgba(78, 71, 255, 1);
 }
+.header{
+  height: 100vh;
+  background-image: url(../Assets/Hero-bg.png);
+  background-size: cover;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 body{
   margin: 0px;
 }
@@ -21,10 +29,24 @@ nav{
   justify-content: space-between;
   margin: 0px 150px;
   padding: 50px 0px;
+  background: transparent;
 }
 nav h3{
   font-weight: 900;
   font-size: 34px;
+}
+.hero-title{
+  font-weight: bold;
+  font-size: 65px;
+  text-align: center;
+}
+.banner{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 37px;
+  margin: 0px 267.5px 152px 267.5px;
 }
 .primary-btn{
   border: none;
