--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@
 }
 body{
   margin: 0px;
+  background-color: rgba(136, 138, 142, 0.055);
 }
 nav{
   display: flex;
@@ -94,4 +95,40 @@ nav h3{
   border-radius: 10px;
   font-weight: bold;
   font-size: 16px;
+}
+.productive-user .bg{
+  background-color: rgba(78, 71, 255, 0.1);
+  padding: 50px 142px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 24px;
+  gap: 600px;
+}
+.productive-user{
+  margin: 116px 159px 137px 141px;
+}
+.details{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+.details1{
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  gap: 0px;
+  margin: 0px;
+  text-align: center;
+}
+.details1 h1, .details1 p{
+  margin: 0px;
+}
+.productive-user .bg h1{
+  font-weight: bold;
+  font-size: 80px;
+  color: rgb(78, 71, 255);
+}
+.productive-user .bg p{
+  color: rgba(0, 0, 0, 0.5);
 }
