--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,3 +198,12 @@ ul{
   display: flex;
   justify-content: space-between;
 }
+button{
+  cursor: pointer;
+}
+button:hover{
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+}
+button:active{
+  opacity: 0.7;
+}
